--- a/train/Bert_adapter.ipynb
+++ b/train/Bert_adapter.ipynb
@@ -161,6 +161,7 @@
         }
       },
       "source": [
+        "# korean_sa : 5 labels / korean_sa_4 : 4 labels(without neutral)\n",
         "TASK = 'korean_sa_4'\n",
         "DATA = 'korean_sa'\n",
         "assert TASK in ('MRPC', 'CoLA', 'korean_sa', 'korean_sa_4'), 'Undefined task'\n",
@@ -280,6 +281,10 @@
         "# Model configs\n",
         "SAVE_CHECKPOINTS_STEPS = 1000\n",
         "SAVE_SUMMARY_STEPS = 500\n",
+        "\n",
+        "''' layer_wise_lr applies different learning rates on different layers\n",
+        "    ex) layer_wise_lr = (True, 0.3) => init_lr on top layer, init_lr * 0.3 on second to top layer ..\n",
+        "'''\n",
         "# layer_wise_lr = (True, 0.3)\n",
         "# layer_wise_lr = None \n",
         "\n",
